Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL)
-
None
Description
The counter srv_stats.key_rotation_list_length is never updated, and therefore Innodb_encryption_key_rotation_list_length will always report 0.
We do not seem to be correctly exporting exactly this the information via any other interface, but INFORMATION_SCHEMA.INNODB_TABLESPACES_ENCRYPTION comes close and is reporting much more detailed information.
Attachments
Issue Links
- relates to
-
MDEV-28537 Unused or useless InnoDB counters num_index_pages_written, num_non_index_pages_written
-
- Closed
-